--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -42,26 +42,35 @@
     {{>local_envasyllabus/course_syllabus_header}}
     <div class="syllabus-summary">{{{summary}}}</div>
     <h3 class="syllabus-title headline headline-v2">{{#str}}syllabuspage:teachers, local_envasyllabus{{/str}}</h3>
-    {{#teachers}}
-        <div class="container">
-            <div class="row">
-                <div class="col-4 span4">
-                    {{#userpicture}}
-                        <div class="myprofileitem picture">
-                            {{{ userpicture }}}
+    <div class="container">
+        <div class="row-fluid">
+            <div class="col-4 span4">
+                {{#teachers}}
+                    <div class="d-flex">
+                        <div>
+                            {{#userpicture}}
+                                <div class="myprofileitem picture">
+                                    {{{ userpicture }}}
+                                </div>
+                            {{/userpicture}}
                         </div>
-                    {{/userpicture}}
-                </div>
-                <div class="col-8 span8 d-flex flex-column">
-                    <div>{{ userfullname }}</div>
-                    <div>{{{ useremail }}}</div>
-                </div>
+                        <div class="d-flex flex-column">
+                            <div>{{ userfullname }}</div>
+                            <div>{{{ useremail }}}</div>
+                        </div>
+                    </div>
+                {{/teachers}}
             </div>
         </div>
-    {{/teachers}}
+    </div>
     <h3 class="syllabus-title headline headline-v2">{{#str}}syllabuspage:competencies, local_envasyllabus{{/str}}</h3>
+    {{{competencies}}}
     <h3 class="syllabus-title headline headline-v2">{{#str}}syllabuspage:prerequisites, local_envasyllabus{{/str}}</h3>
+    {{{prerequisites}}}
     <h3 class="syllabus-title headline headline-v2">{{#str}}syllabuspage:program, local_envasyllabus{{/str}}</h3>
+    {{{programme}}}
     <h3 class="syllabus-title headline headline-v2">{{#str}}syllabuspage:vaq, local_envasyllabus{{/str}}</h3>
+    {{{vaq}}}
     <h3 class="syllabus-title headline headline-v2">{{#str}}syllabuspage:additionalinfos, local_envasyllabus{{/str}}</h3>
+    {{{additionalinfos}}}
 </div>
