Catalog page and filters

--- a/templates/catalog.mustache
+++ b/templates/catalog.mustache
@@ -28,11 +28,7 @@
 }}
 <div id="catalog-{{uniqid}}">
     <div data-region="catalog-view-content"  id="catalog-content-{{uniqid}}">
-        <div class="card-deck dashboard-card-deck one-row" style="height: 13rem">
-            {{> core_course/placeholder-course }}
-            {{> core_course/placeholder-course }}
-            {{> core_course/placeholder-course }}
-            {{> core_course/placeholder-course }}
+        <div class="catalog-courses" data-courses="{{courses}}">
         </div>
     </div>
 </div>
