--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,11 @@
     font-weight: bold;
     font-size: x-large;
 }
+
+.local-envasyllabus-ccat .cshortname {
+    margin-top: -1.5em;
+}
+
+.local-envasyllabus-ccat .course-card .card-img-top {
+    min-height: 15em;
+}
