--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,6 @@
 .local-envasyllabus-ccat .course-card .card-img-top {
     min-height: 15em;
 }
+.local-envasyllabus-ccat .course-card  {
+    min-height: 25em;
+}
