--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,26 @@
 .local-envasyllabus-ccat .course-card .card-img-top {
     min-height: 15em;
 }
-.local-envasyllabus-ccat .course-card  {
+
+.local-envasyllabus-ccat .course-card {
     min-height: 25em;
+    max-width: 300px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* Fix some issues with lambda theme */
+.local-envasyllabus-ccat .row-fluid [class*="span"]:first-child,
+.local-envasyllabus-ccat .row-fluid [class*="span"],
+.local-envasyllabus-ccat .course-outer-card
+.local-envasyllabus-ccat .course-outer-card:first-child {
+    margin-left: 1em !important;
+    padding-top: 2em;
+}
+
+/* Fix some issues with lambda theme */
+.teacher-list-container .row [class*="span"]:first-child,
+.teacher-list-container .row [class*="span"] {
+    margin-left: 1em !important;
+    padding-top: 1em;
 }
