--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@
 }
 
 .local-envasyllabus-ccat .course-card .card-img-top {
-    min-height: 15em;
+    height: 200px;
+    width: 100%;
 }
 
 .local-envasyllabus-ccat .course-card {
@@ -33,8 +34,8 @@
 }
 
 /* Fix some issues with lambda theme */
-.teacher-list-container .row [class*="span"]:first-child,
-.teacher-list-container .row [class*="span"] {
+.teachers-container .row [class*="span"]:first-child,
+.teachers-container .row [class*="span"] {
     margin-left: 1em !important;
     padding-top: 1em;
 }
