Several fixes and improvements
* Reorder and rework custom field list
* Header data is now structured so we can compute a total for each section
* Add summary_fr and summary_en for basic multilingual support
* Remove email and profile link when not connected or user cannot see emails
* Minimize space for filters in the catalogue page
* Take course manager from a specific role
* Do not force login when looking at the syllabus page for a course
* Syllabus fields are invisible

--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -37,11 +37,9 @@
 <div class="local-envasyllabus-course-syllabus">
     <h3 class="syllabus-title">{{#str}}syllabuspage:title, local_envasyllabus{{/str}}</h3>
     <div class="syllabus-fullname text-black-50">{{coursedata.fullname}}</div>
-    {{#manager}}
-        <div class="syllabus-resp text-light">
-            {{#str}}syllabuspage:manager, local_envasyllabus{{/str}}: {{fullname}} ({{email}})
-        </div>
-    {{/manager}}
+    <div class="syllabus-resp text-light">
+        {{#str}}syllabuspage:manager, local_envasyllabus{{/str}}: {{{managers}}}
+    </div>
     {{>local_envasyllabus/course_syllabus_header}}
     <div class="syllabus-summary">{{{summary}}}</div>
     {{<local_envasyllabus/course_syllabus_collapsible}}
