--- a/templates/catalog_course_categories.mustache
+++ b/templates/catalog_course_categories.mustache
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="card-body p-2 d-flex flex-column" id="course-info-container-{{id}}-{{uniqid}}">
                                     <div class="d-flex align-items-start p-b-1 flex-grow-1">
-                                        <div class="w-100 text-truncate">
+                                        <div class="w-100 text-wrap">
                                             <span class="sr-only ">
                                                 {{#str}}aria:coursename, core_course{{/str}}
                                             </span>
