--- a/templates/course_syllabus_header.mustache
+++ b/templates/course_syllabus_header.mustache
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col-4 span4"><img class="img-fluid" src="{{coursedata.courseimage}}" alt="{{coursedata.fullname}}"></div>
         <div class="col-8 span8">
-            <table class="table-borderless">
+            <table class="table table-borderless syllabus-data">
                 {{#headerdata}}
                     <tr class="{{class}}">
                         <td>{{#icon}}{{#pix}}{{.}}, local_envasyllabus, {{title}}{{/pix}}{{/icon}}{{title}}</td>
