--- a/styles.css
+++ b/styles.css
@@ -3,38 +3,50 @@
 #page-local-envasyllabus-syllabuspage .small-doghnut {
     width: 100% !important;
 }
+
 /* Course page */
 .local-envasyllabus-course-syllabus .syllabus-title {
     font-weight: bold;
     font-size: xx-large;
+}
+/* Course page */
+.local-envasyllabus-course-syllabus .syllabus-header-img {
+    max-height: 400px;
 }
 
 .local-envasyllabus-course-syllabus .syllabus-data {
     line-height: normal;
     width: auto;
 }
-.local-envasyllabus-course-syllabus .syllabus-data  td {
+
+.local-envasyllabus-course-syllabus .syllabus-data td {
     border-top: none;
     padding: 0px 8px;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-resp {
     padding: 0.5em 0em 2em;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td,
 .local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-bottom td {
     font-size: large;
     font-weight: bolder;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td {
     padding: 0em 8px 1em;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-data tr.highlighted-top td {
     padding: 1em 8px 0em;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-fullname {
     font-weight: bold;
     font-size: x-large;
 }
+
 .local-envasyllabus-course-syllabus .syllabus-title .title-caret {
     display: inline-block;
     width: 1em;
@@ -55,6 +67,9 @@
     margin-top: -1.5em;
 }
 
+.local-envasyllabus-ccat .course-card {
+    height: 350px;
+}
 .local-envasyllabus-ccat .course-card .card-img-top {
     height: 200px;
     width: 100%;
@@ -66,6 +81,16 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.local-envasyllabus-ccat .course-img {
+    background-size: cover;
+}
+
+.local-envasyllabus-ccat .view-course img {
+    width: 1.5em;
+    height: 1.5em;
+}
+
 
 /* Fix some issues with lambda theme */
 .local-envasyllabus-ccat .row-fluid [class*="span"]:first-child,
