--- a/templates/catalog.mustache
+++ b/templates/catalog.mustache
@@ -36,7 +36,7 @@
         {{/js}}
     </div>
     <div data-region="catalog-view-content" id="catalog-content-{{uniqid}}">
-        <div class="catalog-courses" data-category-root-id="{{categoryrootid}}">
+        <div class="catalog-courses" data-category-root-id="{{categoryrootid}}" {{#currentlang}}data-current-lang="{{.}}"{{/currentlang}}>
         </div>
     </div>
 </div>
