--- a/templates/catalog_course.mustache
+++ b/templates/catalog_course.mustache
@@ -48,7 +48,10 @@
                                                 {{#str}}aria:coursename, core_course{{/str}}
                                             </span>
                     <span class="font-weight-bold">
-                        {{fullname}}
+                        {{{displayname}}}
+                        <a type="button" data-toggle="popover" data-placement="left" class="course-info-popover"
+                           title="{{#str}}course:summary, local_envasyllabus{{/str}}"
+                           data-content="{{smallsummarytext}}">{{#pix}}i/info, core, {{#str}}info{{/str}}{{/pix}}</a>
                     </span>
                     {{^visible}}
                         <div class="d-flex flex-wrap">
@@ -76,10 +79,7 @@
                 {{/cf.uc_ects.value}}
             </div>
             <div class="align-self-end">
-                <a href="{{syllabusurl}}">{{#pix}}i/hide, core, {{#str}}view{{/str}}{{/pix}}</a>
-                <a type="button" data-toggle="popover" data-placement="left" class="course-info-popover"
-                   title="{{#str}}course:summary, local_envasyllabus{{/str}}"
-                   data-content="{{smallsummarytext}}">{{#pix}}i/info, core, {{#str}}info{{/str}}{{/pix}}</a>
+                <a href="{{syllabusurl}}" class="icon-large">{{#pix}}i/arrowview, local_envasyllabus, {{#str}}view{{/str}}{{/pix}}</a>
             </div>
         </div>
     </div>
