--- a/templates/catalog_course.mustache
+++ b/templates/catalog_course.mustache
@@ -49,7 +49,7 @@
                                             </span>
                     <span class="font-weight-bold">
                         {{{displayname}}}
-                        <a type="button" data-toggle="popover" data-placement="left" class="course-info-popover"
+                        <a type="button" data-toggle="popover" data-placement="right" class="course-info-popover"
                            title="{{#str}}course:summary, local_envasyllabus{{/str}}"
                            data-content="{{smallsummarytext}}">{{#pix}}i/info, core, {{#str}}info{{/str}}{{/pix}}</a>
                     </span>
