--- a/templates/course_syllabus_collapsible.mustache
+++ b/templates/course_syllabus_collapsible.mustache
@@ -38,7 +38,7 @@
         <span class="title-caret mr-3"></span><span>{{$title}}{{/title}}</span>
     </h3>
     <div class="container {{type}}-container" id="{{$id}}{{/id}}">
-        <div class="row">
+        <div class="d-flex flex-wrap align-content-around">
             {{$content}}{{/content}}
         </div>
     </div>
