--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -48,7 +48,7 @@
         {{$title}}{{#str}}syllabuspage:teachers, local_envasyllabus{{/str}}{{/title}}
         {{$content}}
             {{#teachers}}
-                <div class="col-3 span3">
+                <div class="w-25">
                     <div class="d-flex p-1">
                         <div>
                             {{#userpicture}}
