--- a/templates/course_syllabus.mustache
+++ b/templates/course_syllabus.mustache
@@ -36,7 +36,7 @@
 
 <div class="local-envasyllabus-course-syllabus">
     <h3 class="syllabus-title">{{#str}}syllabuspage:title, local_envasyllabus{{/str}}</h3>
-    <div class="syllabus-fullname text-black-50">{{coursedata.fullname}}</div>
+    <div class="syllabus-fullname text-black-50">{{coursedata.displayname}}</div>
     <div class="syllabus-resp text-light">
         {{#str}}syllabuspage:manager, local_envasyllabus{{/str}}: {{{managers}}}
     </div>
