--- a/templates/course_syllabus_collapsible.mustache
+++ b/templates/course_syllabus_collapsible.mustache
@@ -37,7 +37,7 @@
     <h3 class="syllabus-title headline-v2 p-1 px-2" data-toggle="collapse" data-target="#{{$id}}{{/id}}" aria-expanded="true" aria-controls="{{$id}}{{/id}}">
         <span class="title-caret mr-3"></span><span>{{$title}}{{/title}}</span>
     </h3>
-    <div class="container {{type}}-container" id="{{$id}}{{/id}}">
+    <div class="container syllabus-desc-container {{$type}}{{/type}}-container" id="{{$id}}{{/id}}">
         <div class="d-flex flex-wrap align-content-around">
             {{$content}}{{/content}}
         </div>
